objects/SBQQ__Quote__c/fields/Account_Channel__c.field-meta.xml
<CustomField>
    <fullName>Account_Channel__c</fullName>
    <formula>TEXT(Account_Sold_to__r.Account_Channel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Channel</label>
    <type>Text</type>
</CustomField>