objects/SBQQ__Quote__c/fields/Account_Sold_to__c.field-meta.xml
<CustomField>
    <fullName>Account_Sold_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Sold to</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Identity__c</field>
            <operation>contains</operation>
            <value>Sold To</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EQuotes</relationshipLabel>
    <relationshipName>EQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>