objects/SBQQ__Quote__c/fields/Average_Discount__c.field-meta.xml
<CustomField>
    <fullName>Average_Discount__c</fullName>
    <formula>Sum_of_Addl_Disc_Amt__c / SBQQ__LineItemCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>