objects/SBQQ__Quote__c/fields/Bill_to__c.field-meta.xml
<CustomField>
    <fullName>Bill_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Identity__c</field>
            <operation>contains</operation>
            <value>Bill To</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EQuotes (Bill to)</relationshipLabel>
    <relationshipName>EQuotes2</relationshipName>
    <type>Lookup</type>
</CustomField>