objects/SBQQ__Quote__c/fields/Bill_To_City__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_City__c</fullName>
    <formula>Bill_to__r.Address_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To City</label>
    <type>Text</type>
</CustomField>