objects/SBQQ__Quote__c/fields/Bill_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Name__c</fullName>
    <formula>Bill_to__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Name</label>
    <type>Text</type>
</CustomField>