objects/SBQQ__Quote__c/fields/Bill_To_Street__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Street__c</fullName>
    <formula>Bill_to__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Street</label>
    <type>Text</type>
</CustomField>