objects/SBQQ__Quote__c/fields/Old_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Old_Net_Amount__c</fullName>
    <label>Old Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>