objects/SBQQ__Quote__c/fields/Overall_Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>Overall_Invoice_Price__c</fullName>
    <label>Overall Invoice Price</label>
    <summarizedField>SBQQ__QuoteLine__c.Invoice_Price__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>