objects/SBQQ__Quote__c/fields/Overall_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Overall_List_Price__c</fullName>
    <label>Overall List Price</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__ListTotal__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>