objects/SBQQ__Quote__c/fields/Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name__c</fullName>
    <label>Quote Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>