objects/SBQQ__Quote__c/fields/Ship_to__c.field-meta.xml
<CustomField>
    <fullName>Ship_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Identity__c</field>
            <operation>contains</operation>
            <value>Ship To</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EQuotes (Ship to)</relationshipLabel>
    <relationshipName>EQuotes1</relationshipName>
    <type>Lookup</type>
</CustomField>