objects/SBQQ__Quote__c/fields/Ship_To_City__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_City__c</fullName>
    <formula>Ship_to__r.Address_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To City</label>
    <type>Text</type>
</CustomField>