objects/SBQQ__Quote__c/fields/Ship_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Name__c</fullName>
    <formula>Ship_to__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Name</label>
    <type>Text</type>
</CustomField>