objects/SBQQ__Quote__c/fields/Ship_To_Street__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Street__c</fullName>
    <formula>Ship_to__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Street</label>
    <type>Text</type>
</CustomField>