objects/SBQQ__Quote__c/fields/Sold_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Name__c</fullName>
    <formula>Account_Sold_to__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold To Name</label>
    <type>Text</type>
</CustomField>