objects/SBQQ__Quote__c/fields/Sum_of_Addl_Disc_Amt__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Addl_Disc_Amt__c</fullName>
    <label>Sum of Addl Disc Amt</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__Discount__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>