objects/SBQQ__Quote__c/fields/Won_Loss__c.field-meta.xml
<CustomField>
    <fullName>Won_Loss__c</fullName>
    <label>Won/Loss</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>