objects/SBQQ__Quote__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
    <fullName>SBQQ__All</fullName>
    <columns>NAME</columns>
    <columns>Quote_Name__c</columns>
    <columns>Account_Sold_to__c</columns>
    <columns>SBQQ__NetAmount__c</columns>
    <columns>Quote_Status__c</columns>
    <columns>Start_date__c</columns>
    <columns>SBQQ__EndDate__c</columns>
    <columns>Bill_to__c</columns>
    <columns>Ship_to__c</columns>
    <columns>Primary_rep__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>